--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
     "name": "EZKicks Video Review",
     "description": "Displays a YouTube video review of the shoe selected on any webpage for the EZKicks app.",
     "version": "1.0",
-    "icons": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+    "Icons": {
+        "16": "Icons/icon16.png",
+        "48": "Icons/icon48.png",
+        "128": "Icons/icon128.png"
     },
     "permissions": [
         "activeTab",
